@@ -1,3 +1,5 @@
+* Set output cost in done transition
+
 Version 4.8.0 - 2018-04-23
 * Bug fixes (see mercurial logs for details)
 
